--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="vertical">
         <div class="main-header-content inner">
             <h1 class="page-title">OpenLetters</h1>
-            <h2 class="page-description"></h2>
+            <h2 class="page-description">Random thoughts about random things</h2>
         </div>
     </div>
     <a class="scroll-down icon-arrow-left" href="#content" data-offset="-45"><span class="hidden">Scroll Down</span></a>
